manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-task
spec:
  selector:
    matchLabels:
      app: add-task
  template:
    metadata:
      labels:
        app: add-task
        
    spec:
      containers:
      - name: add-task
        image: rakeshacr.azurecr.io/addtask:v1
        ports:
        - containerPort: 8000
