manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: add-task-ingress
  labels:
    app.kubernetes.io/name: add-task-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: addtask.devopsinsight.biz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: add-task
            port: 
              number: 80
